# openpivot

./: Makefile.cvs  ProjectHome.md  README  acinclude.m4  conf.sh  configsample.xml  configure.ac  openpivot.tmproj
example/: configsample.xml  configsample2.xml  sampleData.csv
mac/openpivot-Xcode.xcodeproj/: project.pbxproj
openpivot.xcodeproj/: project.pbxproj
src/: Makefile.am  Makefile.in
src/app/: OptionParser.cpp  OptionParser.h  main.cpp
src/frontend/: XMLConfigReader.cpp  XMLConfigReader.h
src/input/: CsvReader.cpp  CsvReader.h
src/openpivotlib/: Accumulator.cpp  Accumulator.h  AggregationColumn.cpp  AggregationColumn.h  OpenPivotContext.cpp  OpenPivotContext.h  PivotTable.cpp  PivotTable.h  Settings.cpp  Settings.h  Utils.cpp  Utils.h
src/output/: CsvWriter.cpp  CsvWriter.h
