#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.



AC_PREREQ(2.61)
AC_INIT([openpivot], [0.0.1], [rpechayr@gmail.com])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
#AC_CONFIG_SRCDIR([src/app/main.cpp])
AC_CONFIG_HEADER([config.h])
# Checks for programs.
AC_PROG_CXX

# Checks for libraries.


# Checks for header files.
AC_PATH_LIBXML2
AC_PATH_GOOGLE_SPARSE_HASH
# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

# Checks for library functions.

AC_SUBST([AM_CXXFLAGS])
AC_SUBST([AM_LDFLAGS])

AC_CONFIG_FILES([Makefile src/Makefile])
AC_OUTPUT
